# template_sdl_project

./: .gitignore  CMakeLists.txt
src/: main.cpp
